--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" th:replace="~{base :: parent}">
+<html lang="en" th:replace="~{base :: parent(~{::#content},~{::title},~{})}">
 <head>
-    
+    <title>About Page</title>
 </head>
 <body>
-    
+    <div id="content">
+        <h1>Welcome to about page</h1>
+    </div>
+
+    <script>
+        console.log("about page")
+    </script>
 </body>
 </html>
