--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{base :: parent(~{::#content}, ~{::title}, ~{::script})}" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
-    
+    <title>Home Page</title>
 </head>
 <body>
-    <h1 data-th-text="${Name}" class="text-center">Welcome ${Name} to Smart Contact Manager</h1>
+    <div id="content">
+        <h1>Home</h1>
+    </div>
 
-
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script>
+        console.log("Home Page");
+    </script>
+    <script>
+        console.log("Home Page2");
+    </script>
 </body>
 </html>
