entities and theme added

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" th:fragment="parent(content,title,script)" xmlns:th="http://www.thymeleaf.org">
+<html
+  class=""
+  lang="en"
+  th:fragment="parent(content,title,script)"
+  xmlns:th="http://www.thymeleaf.org"
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      data-th-href="@{'/images/3d-contact.png'}"
+    />
     <title data-th-replace="${title}">Base Page</title>
-    <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+
   </head>
-  <body>
+  <body class="h-screen w-full dark:bg-gray-900 dark:text-white">
+    <div data-th-replace="navbar::navbar"></div>
 
-  <div data-th-replace="navbar::navbar">
+    <div class="p-4 ">
 
-  </div>
-
-
-    <section data-th-replace="${content}">
-
-    </section>
-
+      <section data-th-replace="${content}"></section>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script data-th-src="@{'/js/script.js'}"></script>
     <th:block data-th-replace="${script}"></th:block>
   </body>
 </html>
